--- a/Index.html
+++ b/Index.html
@@ -14,21 +14,27 @@
 
 <!-- Section - Header -->
       <header>
+        <div id="header" class="container">
 
-        <div id="logo">
-          <img src="./Resources/images/ic-logo.svg" alt="Logo">
-          <h3><span>Colmar</span>Academy</h3>
+            <div id="logo">
+              <img src="./Resources/images/ic-logo.svg" alt="Logo">
+              <h3><span>Colmar</span>Academy</h3>
+            </div>
+
+            <nav>
+              <span>On Campus</span>
+              <span>Online</span>
+              <span>Companies</span>
+              <span>Sign In</span>
+            </nav>
+
         </div>
-
-        <nav>
-          <span>On Campus</span>
-          <span>Online</span>
-          <span>Companies</span>
-          <span>Sign In</span>
-        </nav>
-
       </header>
 
+<!-- Section - Start Here -->
+      <div id="Start">
+
+      </div>
 
 
 <!-- Closing of page -->
