--- a/Index.html
+++ b/Index.html
@@ -12,28 +12,52 @@
 <!-- Opening of page -->
     <div id="Page">
 
+<!-- NOTE: Max width of page set to 1200px despite it not being indicated in specs. This choice is based on several disscusions found on Stack Overflow.  -->
+
 <!-- Section - Header -->
       <header>
-        <div id="header" class="container">
+        <div class="container">
 
-            <div id="logo">
-              <img src="./Resources/images/ic-logo.svg" alt="Logo">
-              <h3><span>Colmar</span>Academy</h3>
+          <div id="header">
+
+              <div id="logo">
+                <img src="./Resources/images/ic-logo.svg" alt="Logo">
+                <h3><span>Colmar</span>Academy</h3>
+              </div>
+
+              <nav>
+                <span>On Campus</span>
+                <span>Online</span>
+                <span>Companies</span>
+                <span>Sign In</span>
+              </nav>
             </div>
-
-            <nav>
-              <span>On Campus</span>
-              <span>Online</span>
-              <span>Companies</span>
-              <span>Sign In</span>
-            </nav>
 
         </div>
       </header>
 
 <!-- Section - Start Here -->
-      <div id="Start">
+      <div id="Startsection">
+        <div class="container">
 
+          <div id="start">
+
+            <div id="startimage">
+              <img src="./Resources/images/banner.jpg" alt="Banner Reading">
+            </div>
+
+            <div id="starttext">
+              <h1>Learn something new everyday</h1>
+              <h2>Bacon ipsum dolor amet pork drumstick salami turducken andouille, pork chop kevin.</h2>
+
+              <div id="startbutton">
+                <h2>Start</h2>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
       </div>
 
 
