--- a/Index.html
+++ b/Index.html
@@ -42,21 +42,57 @@
 
           <div id="start">
 
-            <div id="startimage">
-              <img src="./Resources/images/banner.jpg" alt="Banner Reading">
+            <div id="startimagecontain">
+              <div id="startimage">
+                <img src="./Resources/images/banner.jpg" alt="Banner Reading">
+              </div>
             </div>
 
-            <div id="starttext">
-              <h1>Learn something new everyday</h1>
-              <h2>Bacon ipsum dolor amet pork drumstick salami turducken andouille, pork chop kevin.</h2>
+            <div id="starttextcontain">
+
+              <div id="starttext">
+                <h1>Learn something new everyday</h1>
+                <h2>Bacon ipsum dolor amet pork drumstick salami turducken andouille, pork chop kevin.</h2>
+              </div>
 
               <div id="startbutton">
                 <h2>Start</h2>
               </div>
+
             </div>
 
           </div>
 
+        </div>
+      </div>
+
+<!-- Section - Practice & Articles -->
+      <div id="practice_articles">
+        <div class="container">
+          <div id="Practicesection">
+
+<!-- Section - Practice -->
+            <div id="practiceLeft">
+              <img src="./Resources/images/information-main.jpg" alt="Information Main">
+              <h1>It doesn't hurt to keep practicing</h1>
+              <p>Bacon ipsum dolor amet venison andouille pork meatball tenderloin turkey buffalo. Brisket t-bone cupim, boudin chicken picanha ball tip strip steak. Ball tip landjaeger short ribs bresaola pastrami. Burgdoggen meatball pig short ribs rump alcatra beef ribs meatloaf biltong. Andouille turkey porchetta boudin.</p>
+              <h5>Emanuel, Sr Strategist at Hiring.com</h5>
+            </div>
+
+            <div id="practiceleft1">
+              <div id="practiceleft1image">
+                <img src="./Resources/images/information-orientation.jpg" alt="information">
+              </div>
+              <div class="practiceleft1text">
+                <h2>Orientation Day</h2>
+                <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                <a href="#">Read More</a>
+              </div>
+            </div>
+
+
+
+          </div>
         </div>
       </div>
 
