Section 2 solution found.

--- a/Index.html
+++ b/Index.html
@@ -67,35 +67,76 @@
       </div>
 
 <!-- Section - Practice & Articles -->
-      <div id="practice_articles">
+      <div id="practice">
         <div class="container">
-          <div id="Practicesection">
+        
+<!-- Left Section -->
+          <div id="sectionleftandright">
 
-<!-- Section - Practice -->
-            <div id="practiceLeft">
-              <img src="./Resources/images/information-main.jpg" alt="Information Main">
-              <h1>It doesn't hurt to keep practicing</h1>
-              <p>Bacon ipsum dolor amet venison andouille pork meatball tenderloin turkey buffalo. Brisket t-bone cupim, boudin chicken picanha ball tip strip steak. Ball tip landjaeger short ribs bresaola pastrami. Burgdoggen meatball pig short ribs rump alcatra beef ribs meatloaf biltong. Andouille turkey porchetta boudin.</p>
-              <h5>Emanuel, Sr Strategist at Hiring.com</h5>
-            </div>
-
-            <div id="practiceleft1">
-              <div id="practiceleft1image">
-                <img src="./Resources/images/information-orientation.jpg" alt="information">
+            <div id="section2left">
+              <div class="image">
+                <img src="./Resources/images/information-main.jpg" alt="orientation">
               </div>
-              <div class="practiceleft1text">
-                <h2>Orientation Day</h2>
-                <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                <a href="#">Read More</a>
+              <div class="text">
+                <p>It doesn't hurt to keep practicing</p>
+                <p>Bacon ipsum dolor amet venison andouille pork meatball tenderloin turkey buffalo. Brisket t-bone cupim, boudin chicken picanha ball tip strip steak.</p>
+                <p>Emanuel, Sr Strategist at Hiring.com</p>
               </div>
             </div>
 
+<!-- Right Section -->
+            <div id="section2right">
+<!-- Story 1 -->
+              <div id="story1">
+
+                <div class="story1image">
+                  <img src="./Resources/images/information-orientation.jpg" alt="orientation">
+                </div>
+
+                <div class="story1text">
+                  <p>Orientation date</p>
+                  <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                  <p>Read more</p>
+                </div>
+
+              </div>
+
+<!-- Story 2 -->
+              <div id="story2">
+
+                <div class="story2image">
+                  <img src="./Resources/images/information-campus.jpg" alt="Campus">
+                </div>
+
+                <div class="story2text">
+                  <p>Orientation date</p>
+                  <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                  <p>Read more</p>
+                </div>
+
+              </div>
+
+<!-- Story 3 -->
+              <div id="story3">
+
+                <div class="story3image">
+                  <img src="./Resources/images/information-guest-lecture.jpg" alt="Guest Lecturer">
+                </div>
+
+                <div class="story3text">
+                  <p>Orientation date</p>
+                  <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                  <p>Read more</p>
+                </div>
+
+              </div>
+
+            </div>
 
 
           </div>
         </div>
       </div>
-
 
 <!-- Closing of page -->
     </div>
