--- a/Index.html
+++ b/Index.html
@@ -69,7 +69,7 @@
 <!-- Section - Practice & Articles -->
       <div id="practice">
         <div class="container">
-        
+
 <!-- Left Section -->
           <div id="sectionleftandright">
 
@@ -77,10 +77,11 @@
               <div class="image">
                 <img src="./Resources/images/information-main.jpg" alt="orientation">
               </div>
+
               <div class="text">
-                <p>It doesn't hurt to keep practicing</p>
+                <h1>It doesn't hurt to keep practicing</h1>
                 <p>Bacon ipsum dolor amet venison andouille pork meatball tenderloin turkey buffalo. Brisket t-bone cupim, boudin chicken picanha ball tip strip steak.</p>
-                <p>Emanuel, Sr Strategist at Hiring.com</p>
+                <h5>Emanuel, Sr Strategist at Hiring.com</h5>
               </div>
             </div>
 
@@ -94,9 +95,9 @@
                 </div>
 
                 <div class="story1text">
-                  <p>Orientation date</p>
+                  <h2>Orientation date</h2>
                   <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                  <p>Read more</p>
+                  <a href="#">Read more</a>
                 </div>
 
               </div>
@@ -109,9 +110,9 @@
                 </div>
 
                 <div class="story2text">
-                  <p>Orientation date</p>
+                  <h2>Orientation date</h2>
                   <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                  <p>Read more</p>
+                  <a href="#">Read more</a>
                 </div>
 
               </div>
@@ -124,9 +125,9 @@
                 </div>
 
                 <div class="story3text">
-                  <p>Orientation date</p>
+                  <h2>Orientation date</h2>
                   <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                  <p>Read more</p>
+                  <a href="#">Read more</a>
                 </div>
 
               </div>
