--- a/Index.html
+++ b/Index.html
@@ -134,6 +134,87 @@
 
             </div>
 
+          </div>
+        </div>
+      </div>
+
+<!-- Section - Start Learning -->
+      <div id="learning">
+        <div class="container">
+
+
+          <div id="learningblock">
+
+            <div class="header">
+              <h1>Start Learning</h1>
+            </div>
+
+            <div id="learninggrid">
+
+              <div class="learninggridtop">
+
+                <div id="learning1" class="learnings">
+                  <img src="./Resources/images/course-software.jpg" alt="Software">
+                  <div class="learning1text">
+                    <h2>Software engineering</h2>
+                    <h5>Courses</h5>
+                    <p>Web Development, Mobile Development, IOT, APIs</p>
+                  </div>
+                </div>
+
+                <div id="learning2" class="learnings">
+                  <img src="./Resources/images/course-computer-art.jpg" alt="Computer">
+                  <div class="learning2text">
+                    <h2>Computer art</h2>
+                    <h5>Courses</h5>
+                    <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+                  </div>
+                </div>
+
+                <div id="learning3" class="learnings">
+                  <img src="./Resources/images/course-design.jpg" alt="Design">
+                  <div class="learning3text">
+                    <h2>Design</h2>
+                    <h5>Courses</h5>
+                    <p>User Experience Design, User Research, Visual Design</p>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="learninggridbottom">
+
+                <div id="learning4" class="learnings">
+                  <img src="./Resources/images/course-data.jpg" alt="Data">
+                  <div class="learning4text">
+                    <h2>Data</h2>
+                    <h5>Courses</h5>
+                    <p>Data Science, Big Data, SQL, Data Visualization</p>
+                  </div>
+                </div>
+
+                <div id="learning5" class="learnings">
+                  <img src="./Resources/images/course-business.jpg" alt="Business">
+                  <div class="learning5text">
+                    <h2>Business</h2>
+                    <h5>Courses</h5>
+                    <p>Product Development, Business Development, Startup</p>
+                  </div>
+                </div>
+
+                <div id="learning6" class="learnings">
+                  <img src="./Resources/images/course-marketing.jpg" alt="Marketing">
+                  <div class="learning6text">
+                    <h2>Marketing</h2>
+                    <h5>Courses</h5>
+                    <p>Analytics, Content Marketing, Mobile Marketing</p>
+                  </div>
+                </div>
+
+              </div>
+
+
+            </div>
 
           </div>
         </div>
