--- a/Index.html
+++ b/Index.html
@@ -110,8 +110,8 @@
                 </div>
 
                 <div class="story2text">
-                  <h2>Orientation date</h2>
-                  <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                  <h2>Our campus</h2>
+                  <p>Find which campus is close to you</p>
                   <a href="#">Read more</a>
                 </div>
 
@@ -125,8 +125,8 @@
                 </div>
 
                 <div class="story3text">
-                  <h2>Orientation date</h2>
-                  <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                  <h2>Our guest lecture</h2>
+                  <p>Join a keynote with Oliver Sack about music in medical treatment</p>
                   <a href="#">Read more</a>
                 </div>
 
@@ -148,6 +148,7 @@
             <div class="header">
               <h1>Start Learning</h1>
             </div>
+
 
             <div id="learninggrid">
 
