Finished first draft of Desktop.

--- a/Index.html
+++ b/Index.html
@@ -214,10 +214,93 @@
 
               </div>
 
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+<!-- Section - Thesis -->
+      <div id="thesis">
+        <div class="container">
+
+          <div id="thesisheader">
+            <h1>Thesis exhibit</h1>
+          </div>
+
+
+          <div id="thesiscontainer">
+
+<!-- Thesis Left -->
+            <div class="thesisleft">
+
+              <div class="thesisleftvideo">
+                <video width="100%" height="auto" controls="true" loop src="./Resources/videos/thesis.mp4" autoplay>
+                </video>
+              </div>
+
+              <div class="thesislefttext">
+                <h2>Reimagine urban</h2>
+                <p>Bacon ipsum dolor amet venison andouille pork meatball tenderloin turkey buffalo. Brisket t-bone cupim, boudin chicken picanha ball tip strip steak.</p>
+              </div>
+
+            </div>
+
+<!-- Thesis right -->
+            <div class="thesisright">
+
+              <div class="thesisstories">
+<!-- Story 1 -->
+                <div class="story1">
+
+                  <div class="thesisstory1image">
+                    <img src="./Resources/images/thesis-fisma.jpg" alt="thesis fisma">
+                  </div>
+
+                  <div class="thesisstory1text">
+                    <h2>Fisma: Design and Prototype</h2>
+                    <p>Designer showcase of new prototype product</p>
+                  </div>
+
+                </div>
+
+<!-- Story 2 -->
+                <div class="story2">
+
+                  <div class="thesisstory2image">
+                    <img src="./Resources/images/thesis-now-and-then.jpg" alt="Thesis now and then">
+                  </div>
+
+                  <div class="thesisstory2text">
+                    <h2>Now and then</h2>
+                    <p>Reasearch study about New York</p>
+                  </div>
+
+                </div>
+
+              </div>
 
             </div>
 
           </div>
+        </div>
+      </div>
+
+<!-- Footer -->
+      <div id="footer">
+        <div class="container">
+
+          <footer>
+            <div class="copyright">
+              <p>&copy;2016 Colmar Academy. All rights reserved</p>
+            </div>
+
+            <div class="footernav">
+              <a href="#">Terms</a>
+              <a href="#">Privacy</a>
+            </div>
+          </footer>
+
         </div>
       </div>
 
