--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="./resources/CSS/reset.css">
     <link rel="stylesheet" type="text/css" href="./resources/CSS/index.css">
-    <link rel="stylesheet" href="XXX Link to any third part fonts-stylesheets here: https://fonts.google.com/ XXXX">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
     <title>Colmar Academy</title>
   </head>
   <body>
