Desktop 2nd review.

--- a/Index.html
+++ b/Index.html
@@ -152,7 +152,7 @@
 
             <div id="learninggrid">
 
-              <div class="learninggridtop">
+              <div class="learninggrid">
 
                 <div id="learning1" class="learnings">
                   <img src="./Resources/images/course-software.jpg" alt="Software">
@@ -180,10 +180,6 @@
                     <p>User Experience Design, User Research, Visual Design</p>
                   </div>
                 </div>
-
-              </div>
-
-              <div class="learninggridbottom">
 
                 <div id="learning4" class="learnings">
                   <img src="./Resources/images/course-data.jpg" alt="Data">
@@ -291,6 +287,7 @@
         <div class="container">
 
           <footer>
+
             <div class="copyright">
               <p>&copy;2016 Colmar Academy. All rights reserved</p>
             </div>
@@ -299,6 +296,7 @@
               <a href="#">Terms</a>
               <a href="#">Privacy</a>
             </div>
+
           </footer>
 
         </div>
