Desktop third review.

--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 <!-- Opening of page -->
     <div id="Page">
 
-<!-- NOTE: Max width of page set to 1200px despite it not being indicated in specs. This choice is based on several disscusions found on Stack Overflow.  -->
+<!-- NOTE: Max width of page set to 1200px despite it not being indicated in specs. This choice is based on several discusions found on Stack Overflow.  -->
 
 <!-- Section - Header -->
       <header>
