Mobile header done.

--- a/Index.html
+++ b/Index.html
@@ -36,6 +36,15 @@
         </div>
       </header>
 
+<!-- Section - Header @media screen max 710 -->
+
+      <header id="headermobile">
+        <img src="./Resources/images/ic-logo.svg" alt="Logo">
+        <img src="./Resources/images/ic-on-campus.svg" alt="Campus">
+        <img src="./Resources/images/ic-online.svg" alt="Online">
+        <img src="./Resources/images/ic-login.svg" alt="Login">
+      </header>
+
 <!-- Section - Start Here -->
       <div id="Startsection">
         <div class="container">
