--- a/Index.html
+++ b/Index.html
@@ -75,6 +75,26 @@
         </div>
       </div>
 
+<!-- Section - Start Here @media screen max 710 -->
+
+
+      <div id="startsectionmobile">
+
+        <div class="startimagemobile">
+          <img src="./Resources/images/banner.jpg" alt="Banner Reading">
+        </div>
+
+        <div class="starttextmobile">
+          <h1>Learn something new everyday</h1>
+          <h2>Bacon ipsum dolor amet pork drumstick salami turducken andouille, pork chop kevin.</h2>
+        </div>
+
+        <div class="startbuttonmobile">
+          <h2>Start</h2>
+        </div>
+
+      </div>
+
 <!-- Section - Practice & Articles -->
       <div id="practice">
         <div class="container">
