Section 3 mobile done.

--- a/Index.html
+++ b/Index.html
@@ -167,6 +167,56 @@
         </div>
       </div>
 
+<!-- Section - Articles @media screen max 710 -->
+
+      <div id="articlesmobile">
+
+        <div id="article1mobile" class="articlemobile">
+
+          <div class="article1mobileimage">
+            <img src="./Resources/images/information-orientation-mobile.jpg" alt="Orientation">
+          </div>
+
+          <div class="article1mobiletext">
+            <h2>Orientation date</h2>
+            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+            <a href="#">Read more</a>
+          </div>
+
+        </div>
+
+        <div id="article2mobile" class="articlemobile">
+
+          <div class="article2mobilimage">
+            <img src="./Resources/images/information-campus-mobile.jpg" alt="Campus">
+          </div>
+
+          <div class="article2mobiletext">
+            <h2>Our campus</h2>
+            <p>Find which campus is close to you</p>
+            <a href="#">Read more</a>
+          </div>
+
+        </div>
+
+        <div id="article3mobile" class="articlemobile">
+
+          <div class="article3mobilimage">
+            <img src="./Resources/images/information-guest-lecture-mobile.jpg" alt="Guest Lecturer">
+          </div>
+
+          <div class="article3mobiletext">
+            <h2>Our guest lecture</h2>
+            <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+            <a href="#">Read more</a>
+          </div>
+
+        </div>
+
+      </div>
+
+
+
 <!-- Section - Start Learning -->
       <div id="learning">
         <div class="container">
