4th section mobile done.

--- a/Index.html
+++ b/Index.html
@@ -295,6 +295,44 @@
         </div>
       </div>
 
+<!-- Section - Start Learning @media screen max 710 -->
+
+      <div id="learningmobile">
+
+        <div class="learningmobileheader">
+          <h1>Start learning</h1>
+        </div>
+
+        <div id="learningmobilemenu">
+
+          <div id="learningmobilemenusoftware" class="learningmobilemenu">
+            <h2>Software engineering</h2>
+          </div>
+
+          <div id="learningmobilemenucomputer" class="learningmobilemenu">
+            <h2>Computer art</h2>
+          </div>
+
+          <div id="learningmobilemenudesign" class="learningmobilemenu">
+            <h2>Design</h2>
+          </div>
+
+          <div id="learningmobilemenudata" class="learningmobilemenu">
+            <h2>Data</h2>
+          </div>
+
+          <div id="learningmobilemenubusiness" class="learningmobilemenu">
+            <h2>Business</h2>
+          </div>
+
+          <div id="learningmobilemenumarketing" class="learningmobilemenu">
+            <h2>Marketing</h2>
+          </div>
+
+        </div>
+
+      </div>
+
 <!-- Section - Thesis -->
       <div id="thesis">
         <div class="container">
