Video mobile section done.

--- a/Index.html
+++ b/Index.html
@@ -399,6 +399,20 @@
         </div>
       </div>
 
+<!-- Section - Thesis @media screen max 710 -->
+      <div id="thesismobile">
+
+        <div class="thesisheader">
+          <h1>Thesis exhibit</h1>
+        </div>
+
+        <div class="thesisvideo">
+          <video width="100%" height="auto" controls="true" loop src="./Resources/videos/thesis.mp4" autoplay>
+          </video>
+        </div>
+
+      </div>
+
 <!-- Footer -->
       <div id="footer">
         <div class="container">
