--- a/Index.html
+++ b/Index.html
@@ -433,6 +433,13 @@
         </div>
       </div>
 
+<!-- Section - Thesis @media screen max 710 -->
+      <div id="footermobile">
+        <div class="copyrightmobile">
+          <p>&copy;2016 Colmar Academy. All rights reserved</p>
+        </div>
+      </div>
+
 <!-- Closing of page -->
     </div>
   </body>
