--- a/Index.html
+++ b/Index.html
@@ -26,10 +26,10 @@
               </div>
 
               <nav>
-                <span>On Campus</span>
-                <span>Online</span>
-                <span>Companies</span>
-                <span>Sign In</span>
+                <a href="#"><span>On Campus</span></a>
+                <a href="#"><span>Online</span></a>
+                <a href="#"><span>Companies</span></a>
+                <a href="#"><span>Sign In</span></a>
               </nav>
             </div>
 
